--- a/style/zav3.css
+++ b/style/zav3.css
@@ -39,18 +39,25 @@ header{
 	float: right;
 	position: relative;
 	bottom: 40px;
+	margin-right: 100px;
+	height: 33px;
+	
 }
 .form input{
 	height: 33px;
 	width: 500px;
 	font-size: 14px;
-	border: 2px solid#DADADA;
-	margin-right: -1px;
+	border-collapse: collapse;
+	vertical-align: top;
+	
 	
 }
-.form img{
-	float: right;
-	margin-right: 100px;
+.form:hover{
+	border: 1px solid #ccc;
+}
+.form img:hover{
+	border-left: 1px solid #ccc;
+	margin-left: -1px;
 }
 h1{
 	font-size: 32px;
@@ -94,7 +101,7 @@ h1{
 	position: absolute;
 	top: 158px;
 	left: 340px;
-	margin-right: 30px;
+	margin-right: 70px;
 }
 .column-rignt{
 	height: 190px; 
