--- a/style/zav3.css
+++ b/style/zav3.css
@@ -1,6 +1,8 @@
 body{
-	min-width: 1400px;
+	width: 1400px;
 	min-height: 610px;
+	vertical-align: top;
+	position: center;
 	
 }
 header{
@@ -49,8 +51,9 @@ header{
 	font-size: 14px;
 	border-collapse: collapse;
 	vertical-align: top;
-	
-	
+}
+.form img{
+	float: right;
 }
 .form:hover{
 	border: 1px solid #ccc;
@@ -96,18 +99,14 @@ h1{
 }
 .category li:nth-child(3){
 	background: #F3F3F3;
-}
-.all{
-	position: absolute;
-	top: 158px;
-	left: 340px;
-	margin-right: 70px;
+
 }
 .column-rignt{
+	width: 1000px;
 	height: 190px; 
 	background: #1199C3;
 	color: #ffffff;
-	float: right;
+	float: left;
 	line-height: 1.4;
 	padding: 0 15px;
 }
@@ -115,15 +114,18 @@ h1{
 	font-size: 20px;
 }
 .block{
+	width: 1000px;
 	border-left: 2px solid#E9E9E9;
 	float: left;
 	
 }
 .block5{
+	width: 950px;
 	float: left;
 	margin: 30px 0 20px 15px;
 }
 .block6{
+	width: 950px;
 	float: left;
 	margin: 10px 0px 0 15px;
 }
@@ -161,11 +163,35 @@ h2 .img2{
 	float: right;
 	margin-right: 270px;
 	border-radius: 15%;
+	padding-right: 30px;
 }
-.int{
-	float: right;
-	position: relative;
-	bottom: 130px;
-	right: 120px;
+.inter{
+	position: absolute;
+	left:1080px;
+	top:385px;
 }
+.inter span4{
+	padding-right: 10px;
+	position: absolute;
+	left: 45px;
+	bottom:-3px;
+	font-size: 17px;
+	padding-left: 2px;
+
+	
+}
+.inter2 span5{
+	position: absolute;
+	left: 45px;
+	bottom: -3px;
+	font-size: 17px;
+	padding-left: 2px;
+
+}
+.inter2{
+	position: absolute;
+	left:1080px;
+	top:530px;
+}
+
 
